--- a/css/main.css
+++ b/css/main.css
@@ -15,9 +15,18 @@ h1 {
 p {
     margin: 3px 0;
 }
+a {
+    color: white;
+    font-weight: 700;
+    text-decoration: none;
+    margin-top: 7px;
+}
 .row {
     display: flex;
 } 
+.row.last {
+    padding: 10px 0;
+}
 .col-left {
     flex: 40%;
 }
